fixed margin of navbar (overlapped by 1px - now removed)

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -46,6 +46,7 @@ light grey: #e1d4cb
 .nav-item.show,
 .nav-link.active {
   background-color: #f29191 !important;
+  margin-bottom: 0px;
 }
 .nav-link.active {
   border: none;
